Hosting page: Fix ask column alignment

--- a/weblate_web/static/style-rtl.css
+++ b/weblate_web/static/style-rtl.css
@@ -2631,8 +2631,7 @@ h2.section-title.hp-style {
   margin-bottom: 10px;
 }
 .pricing-table-right .col .price.small {
-  height: 109px;
-  padding: 30px;
+  padding: 34px 40px;
   text-align: center;
 }
 
